--- a/Tour/layout.html
+++ b/Tour/layout.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tour</title>
+    <link rel="stylesheet" href="../Tour/css/style.css">
 </head>
 <body>
     <div id="wrapper">
