--- a/Board/user/register.html
+++ b/Board/user/register.html
@@ -79,7 +79,7 @@
         </table>
 
         <div>
-            <a href="#" class="btnCancel">취소</a>
+            <a href="./login.html" class="btnCancel">취소</a>
             <input type="submit" class="btnRegister" value="회원가입"/>
         </div>
         </form>
