--- a/Ch02/3_테이블태그.html
+++ b/Ch02/3_테이블태그.html
@@ -6,7 +6,7 @@
     <!--
         날짜 : 2022/09/14
         이름 : 김채영
-        내용 : HTML 테이블 실습하기
+        내용 <: HTML 테이블 실습하기
     -->
 </head>
 <body>
