--- a/Farmstory/community/menu.html
+++ b/Farmstory/community/menu.html
@@ -45,10 +45,15 @@
                 <article>
                     <nav>
                         <img src="../img/sub_nav_tit_cate5_tit2.png" alt="오늘의식단">
+                        <p>
+                            HOME > 커뮤니티 > <em>오늘의식단</em>
+                        </p>
                     </nav>
-                    <span>
-                        내용
-                    </span>
+        
+                    <!-- 내용 시작 -->
+        
+                    <img src="../img/board_list.png" alt="">
+                    <!-- 내용 끝 -->
                 </article>
             </section>
         </div>
