--- a/Farmstory/event/event.html
+++ b/Farmstory/event/event.html
@@ -41,10 +41,15 @@
                 <article>
                     <nav>
                         <img src="../img/sub_nav_tit_cate4_tit1.png" alt="이벤트">
+                        <p>
+                            HOME > 이벤트 > <em>이벤트</em>
+                        </p>
                     </nav>
-                    <span>
-                        내용
-                    </span>
+        
+                    <!-- 내용 시작 -->
+        
+                    <img src="../img/board_list.png" alt="">
+                    <!-- 내용 끝 -->
                 </article>
             </section>
         </div>
