--- a/Farmstory/index.html
+++ b/Farmstory/index.html
@@ -3,8 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>팜스토리::메인</title>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"/>
     <link rel="stylesheet" href="./css/style.css">
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>    
+    <script>
+        $(function(){
+            $('.slider > ul').bxSlider({
+                slideWidth: 980,
+                pager: false,
+                controls: false,
+                auto: true
+            });
+
+            $('#tabs').tabs();
+        });
+    </script>
 </head>
 <body>
     <div id="wrapper">
@@ -30,25 +46,11 @@
         <main>
             <div class="slider">
                 <div class="bx-wrapper" style="max-width: 980px;">
-                    <div class="bx-viewport" aria-live="polite">
-                        <ul>
-                            <li class="bx-clone" aria-hidden="true">
-                                <img src="./img/main_slide_img3.jpg" alt="슬라이더3">
-                            </li>
-                            <li aria-hidden="true">
-                                <img src="./img/main_slide_img1.jpg" alt="슬라이더1">
-                            </li>
-                            <li aria-hidden="true">
-                                <img src="./img/main_slide_img2.jpg" alt="슬라이더2">
-                            </li>
-                            <li aria-hidden="false">
-                                <img src="./img/main_slide_img3.jpg" alt="슬라이더3">
-                            </li>
-                            <li class="bx-clone" aria-hidden="true">
-                                <img src="./img/main_slide_img1.jpg" alt="슬라이더1">
-                            </li>
-                        </ul>
-                    </div>
+                    <ul>
+                        <li><img src="./img/main_slide_img1.jpg" alt="슬라이더1"></li>
+                        <li><img src="./img/main_slide_img2.jpg" alt="슬라이더2"></li>
+                        <li><img src="./img/main_slide_img3.jpg" alt="슬라이더3"></li>
+                    </ul>
                 </div>
                 <img src="./img/main_slide_img_tit.png" alt="사람과 자연을 사랑하는 팜스토리">
                 <div class="banner">
@@ -237,7 +239,34 @@
                     </p>
                 </div>
                 <div>
-                   3
+                    <div id="tabs">
+                        <ul>
+                            <li><a href="#tabs-1">공지사항</a></li>
+                            <li><a href="#tabs-2">1:1 고객문의</a></li>
+                            <li><a href="#tabs-3">자주묻는 질문</a></li>
+                        </ul>
+                        <div id="tabs-1">
+                            <ul class="txt">
+                                <li><a href="#">· 홈페이지 오픈 기념 이벤트를 진행합니다.</a></li>
+                                <li><a href="#">· 홈페이지 오픈 기념 이벤트를 진행합니다.</a></li>
+                                <li><a href="#">· 홈페이지 오픈 기념 이벤트를 진행합니다.</a></li>
+                            </ul>
+                        </div>
+                        <div id="tabs-2">
+                            <ul class="txt">
+                                <li><a href="#">· 홈페이지 이용 관련 불편사항을 들려주세요.</a></li>
+                                <li><a href="#">· 홈페이지 이용 관련 불편사항을 들려주세요.</a></li>
+                                <li><a href="#">· 홈페이지 이용 관련 불편사항을 들려주세요.</a></li>
+                            </ul>
+                        </div>
+                        <div id="tabs-3">
+                            <ul class="txt">
+                                <li><a href="#">· 홈페이지를 오픈하였습니다.</a></li>
+                                <li><a href="#">· 홈페이지를 오픈하였습니다.</a></li>
+                                <li><a href="#">· 홈페이지를 오픈하였습니다.</a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
