--- a/Farmstory/market/market.html
+++ b/Farmstory/market/market.html
@@ -41,10 +41,16 @@
                 <article>
                     <nav>
                         <img src="../img/sub_nav_tit_cate2_tit1.png" alt="장보기">
+                        <p>
+                            HOME > 장보기 > <em>장보기</em>
+                        </p>
                     </nav>
-                    <span>
-                        내용
-                    </span>
+
+                     <!-- 내용 시작 -->
+                    <img src="../img/board_list.png" alt="">
+
+                    <!-- 내용 끝 -->
+
                 </article>
             </section>
         </div>
