--- a/Farmstory/croptalk/story.html
+++ b/Farmstory/croptalk/story.html
@@ -43,10 +43,15 @@
                 <article>
                     <nav>
                         <img src="../img/sub_nav_tit_cate3_tit1.png" alt="농작물이야기">
+                        <p>
+                            HOME > 농작물이야기 > <em>농작물이야기</em>
+                        </p>
                     </nav>
-                    <span>
-                        내용
-                    </span>
+        
+                    <!-- 내용 시작 -->
+        
+                    <img src="../img/board_list.png" alt="">
+                    <!-- 내용 끝 -->
                 </article>
             </section>
         </div>
