--- a/HangOut/member/terms.html
+++ b/HangOut/member/terms.html
@@ -22,41 +22,54 @@
       src="https://kit.fontawesome.com/20962f3e4b.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="../css/member.css" />
   </head>
   <body>
     <div id="wrapper">
       <header class="header">
         <div class="logo">
-          <a href="../index.html"><img src="./img/logo.png" alt="logo" /></a>
+          <a href="../index.html"><img src="../img/logo.png" alt="logo" /></a>
         </div>
       </header>
-      <main>
-        <section>
-          <section class="login">
-            <div>
-              <h3>로그인을 먼저 해주세요!</h3>
-              <div class="form">
-                <form action="#">
-                  <input type="text" name="uid" placeholder="아이디" />
-                  <input type="password" name="pass" placeholder="비밀번호" />
-                  <input type="submit" id="login" value="GO" />
-                </form>
-              </div>
-              <ul class="menu">
-                <li>
-                  회원이 아니세요?
-                  <a href="./member/terms.html">회원가입</a>
-                </li>
-                <li>
-                  아이디/비밀번호를 잊으셨나요?
-                  <a href="#">아이디찾기</a>&nbsp; |&nbsp;
-                  <a href="#">비밀번호찾기</a>
-                </li>
-              </ul>
+      <main class="terms">
+        <div class="div">
+          <div class="top">
+            <h3>회원약관</h3>
+          </div>
+
+          <div class="terms-content">
+            <div class="content">
+              <h4>이용약관</h4>
+              <textarea readonly>adadad</textarea>
             </div>
-          </section>
-        </section>
+            <div class="terms-check">
+              <input type="checkbox" />
+              <p>동의합니다.</p>
+            </div>
+          </div>
+          <div class="terms-content">
+            <div class="content">
+              <h4>개인정보처리방침</h4>
+              <textarea readonly>aadadad</textarea>
+            </div>
+            <div class="terms-check">
+              <input type="checkbox" />
+              <p>동의합니다.</p>
+              <div>
+                <input type="checkbox" name="all" />
+                <p>전체 동의합니다.</p>
+              </div>
+            </div>
+          </div>
+          <div class="button">
+            <a href="../index.html">
+              <input type="button" class="btnCancel" value="취소" />
+            </a>
+            <a href="./register.html">
+              <input type="button" class="btnNext" value="다음" />
+            </a>
+          </div>
+        </div>
       </main>
       <div class="footer_div">
         <footer>
