--- a/HangOut_HTML/member/findPw.html
+++ b/HangOut_HTML/member/findPw.html
@@ -23,6 +23,21 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="../css/member.css" />
+    <script>
+      let regPass =
+        /^.*(?=^.{5,15}$)(?=.*\d)(?=.*[a-zA-Z])(?=.*[!@#$%^&+=]).*$/;
+      $(function () {
+        $(".btnClose").click(function () {
+          $(this).closest(".popup").removeClass("on");
+        });
+
+        $(".btnNext").click(function (e) {
+          e.preventDefault();
+
+          $("#popPw").addClass("on");
+        });
+      });
+    </script>
   </head>
   <body>
     <div id="wrapper">
@@ -34,22 +49,19 @@
       <main class="find findId">
         <div class="div">
           <div class="top">
-            <h3>아이디 찾기</h3>
+            <h3>비밀번호 찾기</h3>
           </div>
         </div>
         <div style="margin-top: 60px">
           <div class="id">
-            <input type="text" name="name" placeholder="이름" />
-            <input type="password" name="email" placeholder="이메일" />
+            <input type="text" name="uid" placeholder="아이디" />
+            <input type="password" name="pass" placeholder="이메일" />
           </div>
-          <div class="result">
-            <p>회원님의 아이디는 aaa입니다.</p>
-          </div>
-          <div class="button" style="padding-top: 50px">
+          <div class="button" style="padding-top: 100px">
             <a href="../index.html">
               <input type="button" class="btnCancel" value="취소" />
             </a>
-            <input type="submit" class="btnNext" value="아이디 찾기" />
+            <input type="submit" class="btnNext" value="비밀번호 변경" />
           </div>
         </div>
       </main>
@@ -76,6 +88,56 @@
             </div>
           </div>
         </footer>
+      </div>
+    </div>
+    <!-- 비밀번호 수정 팝업 -->
+    <div id="popPw" class="popup">
+      <div class="find findPwChange">
+        <nav>
+          <h1>비밀번호 변경</h1>
+          <button class="btnClose">X</button>
+        </nav>
+        <form action="#">
+          <table border="0">
+            <tr>
+              <td>아이디</td>
+              <td class="pwuid">aaa</td>
+            </tr>
+            <tr>
+              <td>새 비밀번호</td>
+              <td>
+                <input
+                  type="password"
+                  id="pass1"
+                  name="pass1"
+                  placeholder="새 비밀번호 입력"
+                  required="required"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td>새 비밀번호 확인</td>
+              <td>
+                <input
+                  type="password"
+                  id="pass2"
+                  name="pass2"
+                  placeholder="새 비밀번호 입력"
+                  required="required"
+                />
+              </td>
+            </tr>
+          </table>
+          <p>
+            비밀번호를 변경해 주세요.<br />
+            영문, 숫자, 특수문자를 사용하여 5자 이상 입력해 주세요.
+          </p>
+
+          <div class="btn">
+            <a href="#" class="popCancel">취소</a>
+            <input type="submit" class="popNext" value="완료" />
+          </div>
+        </form>
       </div>
     </div>
   </body>
