--- a/HangOut_HTML/main.html
+++ b/HangOut_HTML/main.html
@@ -27,18 +27,27 @@
   <body>
     <div id="wrapper">
       <header class="header">
+        <div class="top">
+          <span>김채영님 반가워요!</span>
+          <a href="#">로그아웃</a>
+          <a href="#">마이페이지</a>
+        </div>
         <div class="logo">
-          <a href="../index.html"><img src="./img/logo.png" alt="logo" /></a>
+          <a href="./main.html"><img src="./img/logo.png" alt="logo" /></a>
         </div>
         <div class="search">
-          <input type="search" ></input>
-          <img src="./img/search.png" alt="검색" />
+          <input type="search" placeholder="친구이름 검색" />
+          <a href="./search/result.html">
+            <img src="./img/search.png" alt="검색" />
+          </a>
         </div>
         <div class="plus">
-          <img src="./img/users.png" alt="친구신청">
+          <a href="#">
+            <img src="./img/users.png" alt="친구신청" />
+          </a>
         </div>
         <div class="chat">
-          <img src="./img/message.png" alt="채팅">
+          <img src="./img/message.png" alt="채팅" />
         </div>
       </header>
       <main>
@@ -48,19 +57,55 @@
             <a href="#"> MORE &nbsp; > </a>
             <ul>
               <li>
-                <img src="./img/woman.jpg" alt="profile" style="width: 100px;">
+                <img src="./img/woman.jpg" alt="profile" style="width: 100px" />
                 <p>김땡땡</p>
-                <img src="./img/message.png" alt="chat" style="width: 100px;">
+                <img src="./img/message.png" alt="chat" style="width: 100px" />
               </li>
               <li>
-                <img src="./img/woman.jpg" alt="profile" style="width: 100px;">
+                <img src="./img/woman.jpg" alt="profile" style="width: 100px" />
                 <p>김키키</p>
-                <img src="./img/message.png" alt="chat" style="width: 100px;">
+                <img src="./img/message.png" alt="chat" style="width: 100px" />
               </li>
               <li>
-                <img src="./img/man.png" alt="profile" style="width: 100px;">
+                <img src="./img/man.png" alt="profile" style="width: 100px" />
                 <p>김코코</p>
-                <img src="./img/message.png" alt="chat" style="width: 100px;">
+                <img src="./img/message.png" alt="chat" style="width: 100px" />
+              </li>
+            </ul>
+          </section>
+          <section class="message">
+            <h3>알림</h3>
+            <a href="#"> MORE &nbsp; > </a>
+            <ul>
+              <li>
+                <a href="#"> 김치치님으로부터 친구신청이 도착했어요! </a>
+              </li>
+              <li>
+                <a href="#"> 김치치님으로부터 친구신청이 도착했어요! </a>
+              </li>
+              <li>
+                <a href="#"> 김치치님으로부터 친구신청이 도착했어요! </a>
+              </li>
+            </ul>
+          </section>
+          <section class="community">
+            <h3>커뮤니티 <strong>HOT</strong></h3>
+            <a href="#"> MORE &nbsp; > </a>
+            <ul>
+              <li>
+                <a href="#"> 끝말잇기 할 사람 </a>
+              </li>
+              <li>
+                <a href="#"> 끝말잇기 할 사람 </a>
+              </li>
+              <li>
+                <a href="#"> 끝말잇기 할 사람 </a>
+              </li>
+              <li>
+                <a href="#"> 끝말잇기 할 사람 </a>
+              </li>
+              <li>
+                <a href="#"> 끝말잇기 할 사람 </a>
               </li>
             </ul>
           </section>
